<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.miislyk.agenda.MainActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutTextInputNombre"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_layoutTextInput"
            android:layout_marginBottom="@dimen/layout_TextInputNombre_marginBottom">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_nombre"/>

        </android.support.design.widget.TextInputLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:orientation="vertical"
           android:layout_below="@id/textInputNombre" >

           <DatePicker
               android:id="@+id/datePicker"
               android:layout_width="@dimen/width_datePicker"
               android:layout_height="@dimen/datePicker_height"
               android:datePickerMode="spinner"
               android:calendarViewShown="false">
           </DatePicker>

       </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutTextInputTelefono"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_layoutTextInput">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_telefono"
                android:id="@+id/textInputTelefono"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutTextInputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_layoutTextInput">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_email"
                android:id="@+id/textInputEmail"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutTextInputDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/textInput_paddingBottom_descripcion">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_descripcion"
                android:id="@+id/textInputDescripcion"
                android:paddingBottom="@dimen/textInput_paddingBottom_descripcion"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonSiguiente_height"
            android:text="@string/button_siguiente"
            android:id="@+id/buttonSiguiente"
            android:theme="@style/botones"
            />

</LinearLayout>
